--- a/07-formulario.html
+++ b/07-formulario.html
@@ -14,7 +14,9 @@
         }
         form{
             box-shadow: black 2px 2px 5px ;
-            margin: auto;
+            margin: 30%;
+            padding: 5px;
+            background-color: rgba(169, 169, 169, 0.253);
         }
     </style>
 
